--- a/index.html
+++ b/index.html
@@ -6,35 +6,38 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <script type="text/x-handlebars" data-template-name="todos/index">
+    <ul id="todo-list">
+      {{#each itemController="todo"}}
+        <li {{bind-attr class="isCompleted:completed isEditing:editing"}}>
+          {{#if isEditing}}
+            {{edit-todo class="edit" value=title focus-out="acceptChanges" insert-newline="acceptChanges"}}
+          {{else}}
+            {{input type="checkbox" checked=isCompleted class="toggle"}}
+            <label {{action "editTodo" on="doubleClick"}}>{{title}}</label><button {{action "removeTodo"}} class="destroy"></button>
+          {{/if}}
+        </li>
+      {{/each}}
+    </ul>
+    </script>
+
     <script type="text/x-handlebars" data-template-name="todos">
-      <section id="todoapp">
-        <header id="header">
-          <h1>todos</h1>
-          {{input type="text" id="new-todo" placeholder="What needs to be done?" 
-              value=newTitle action="createTodo"}}
-        </header>
+
+    <section id="todoapp">
+      <header id="header">
+        <h1>todos</h1>
+        {{input type="text" id="new-todo" placeholder="What needs to be done?" 
+                value=newTitle action="createTodo"}}
+      </header>
 
         <section id="main">
-          <ul id="todo-list">
-            {{#each itemController="todo"}}
-            <li {{bind-attr class="isCompleted:completed isEditing:editing"}}>
-              {{#if isEditing}}
-                {{edit-todo class="edit" value=title focus-out="acceptChanges" insert-newline="acceptChanges"}}
-              {{else}}
-                {{input type="checkbox" checked=isCompleted class="toggle"}}
-                <label {{action "editTodo" on="doubleClick"}}>{{title}}</label><button class="destroy"></button>
-              {{/if}}
-            </li>
-            {{/each}}
-          </ul>
-
+          {{outlet}}
           <input type="checkbox" id="toggle-all">
         </section>
 
         <footer id="footer">
           <span id="todo-count">
             <strong>{{remaining}}</strong> {{inflection}} left</span>
-          </span>
           <ul id="filters">
             <li>
               <a href="all" class="selected">All</a>
@@ -51,12 +54,14 @@
             Clear completed (1)
           </button>
         </footer>
-      </section>
+    </section>
 
-      <footer id="info">
-        <p>Double-click to edit a todo</p>
-      </footer>
+    <footer id="info">
+      <p>Double-click to edit a todo</p>
+    </footer>
+    
     </script>
+
     <script src="js/libs/jquery.min.js"></script>
     <script src="js/libs/handlebars.js"></script>
     <script src="js/libs/ember.js"></script>
